WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33348
REGRESSION (
r48075
): Clicking and dragging in a widget's text field doesn't create a selection; drags widget instead ( Translation, Weather, Ski Report )
https://bugs.webkit.org/show_bug.cgi?id=33348
Summary
REGRESSION (r48075): Clicking and dragging in a widget's text field doesn't c...
Maciej Stachowiak
Reported
2010-01-07 15:10:14 PST
REGRESSION (
r48075
): Clicking and dragging in a widget's text field doesn't create a selection; drags widget instead ( Translation, Weather, Ski Report )
Attachments
Patch
(1.73 KB, patch)
2010-01-07 15:11 PST
,
Maciej Stachowiak
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Maciej Stachowiak
Comment 1
2010-01-07 15:11:38 PST
Created
attachment 46090
[details]
Patch
Simon Fraser (smfr)
Comment 2
2010-01-07 15:15:00 PST
Comment on
attachment 46090
[details]
Patch
> Index: WebKit/mac/WebView/WebView.mm > =================================================================== > --- WebKit/mac/WebView/WebView.mm (revision 52952) > +++ WebKit/mac/WebView/WebView.mm (working copy) > @@ -1301,6 +1301,8 @@ static bool fastDocumentTeardownEnabled( > settings->setApplicationChromeMode([preferences applicationChromeModeEnabled]); > if ([preferences userStyleSheetEnabled]) { > NSString* location = [[preferences userStyleSheetLocation] _web_originalDataAsString]; > + if ([location isEqual:@"apple-dashboard://stylesheet"])
Prefer isEqualToString. r=me
WebKit Review Bot
Comment 3
2010-01-07 15:15:17 PST
style-queue ran check-webkit-style on
attachment 46090
[details]
without any errors.
Maciej Stachowiak
Comment 4
2010-01-07 15:34:19 PST
Committed
r52953
: <
http://trac.webkit.org/changeset/52953
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug