2010-01-07  Maciej Stachowiak  <mjs@apple.com>

Reviewed by Simon Fraser.

        REGRESSION (r48075): Clicking and dragging in a widget's text field doesn't create a selection; drags widget instead ( Translation, Weather, Ski Report )
        https://bugs.webkit.org/show_bug.cgi?id=33348
        <rdar://problem/7310616>

        * WebView/WebView.mm:
        (-[WebView _preferencesChangedNotification:]): We only want to
        handle file: URLs for the user stylesheet now, so special-case the
        DashboardClient's funky user stylesheet URL by mapping it to the
        equivalent file URL.


Canonical link: https://commits.webkit.org/44365@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@52953 268f45cc-cd09-0410-ab3c-d52691b4dbfc